// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`colour sampled from a position-dependent texture > human, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "64ceb1c4ef5a8fd6",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 22.19,
  "mesh": "d5444fc08fd483e8",
  "vertices": 1246,
}
`;

exports[`colour sampled from a position-dependent texture > human, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "b39725ede37e753e",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`colour sampled from a position-dependent texture > human, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "b39725ede37e753e",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`colour sampled from a position-dependent texture > legacy animal, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "a4e2c4f0f5f515b5",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 28.64,
  "mesh": "3247fc015e9f5902",
  "vertices": 1023,
}
`;

exports[`colour sampled from a position-dependent texture > legacy animal, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "4975838df9786177",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`colour sampled from a position-dependent texture > legacy animal, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "4975838df9786177",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`human renderer golden output > E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "086d631075ba6436",
  "leftEyeOpenPx": 13.87,
  "lipGapPx": 9.31,
  "mesh": "2998948d83b0faf4",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24410,
  "drawing": "87dfa10d4ed7a5d6",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 2.05,
  "mesh": "0cc103b49903d9c1",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "a2a3c859ff6388f3",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 1.03,
  "mesh": "bbf58c7f0ec61de7",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "b571584f79560212",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 17.63,
  "mesh": "d0f91854548765ca",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "f2cf09d8cd2818bd",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": -0.04,
  "mesh": "58159f581dae4648",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24153,
  "drawing": "f531daffd853dc65",
  "leftEyeOpenPx": 10.3,
  "lipGapPx": -0.04,
  "mesh": "bd1f7cd51f63c607",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24171,
  "drawing": "38b05b1bd7a74dcb",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": -0.04,
  "mesh": "58159f581dae4648",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24244,
  "drawing": "4efda24c7ef502b9",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": 12.43,
  "mesh": "6cac4289f5216b68",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "f2cf09d8cd2818bd",
  "leftEyeOpenPx": 14.48,
  "lipGapPx": -0.04,
  "mesh": "58159f581dae4648",
  "vertices": 1246,
}
`;

exports[`human renderer golden output > smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "fdb5e0bb51a62704",
  "leftEyeOpenPx": 13.44,
  "lipGapPx": -0.04,
  "mesh": "3a4c06cb78cd0fc4",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "7a0575ad99138458",
  "leftEyeOpenPx": 17.46,
  "lipGapPx": 11.72,
  "mesh": "2f51a6ee0365874b",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24410,
  "drawing": "e9f56068972bc08e",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 2.59,
  "mesh": "2826939e686ec3fa",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "e11940cb0190e6e4",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 1.29,
  "mesh": "8ea9bf85e3bcc660",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24511,
  "drawing": "4467abfeeb7aeeca",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 22.19,
  "mesh": "d5444fc08fd483e8",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "fef25e840a5612f8",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24153,
  "drawing": "02daaca6dc71135c",
  "leftEyeOpenPx": 12.96,
  "lipGapPx": -0.06,
  "mesh": "d1b723badef9db5a",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24171,
  "drawing": "1772dc4abc98208b",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24244,
  "drawing": "e21d65e42b77dda6",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": 15.65,
  "mesh": "faa6f17c6d3d5f27",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "fef25e840a5612f8",
  "leftEyeOpenPx": 18.22,
  "lipGapPx": -0.06,
  "mesh": "37b5e0eff6ed8ce6",
  "vertices": 1246,
}
`;

exports[`human renderer golden output, face framing > smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 24121,
  "drawing": "34431a5ec453c434",
  "leftEyeOpenPx": 16.91,
  "lipGapPx": -0.06,
  "mesh": "f639068d056acd76",
  "vertices": 1246,
}
`;

exports[`legacy animal rig golden output > face, E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20041,
  "drawing": "76c2c1a965841aeb",
  "leftEyeOpenPx": 26.01,
  "lipGapPx": 22.03,
  "mesh": "125b199fcbc20c7f",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "56dc92d53afb5549",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 9.03,
  "mesh": "248f452b9f4aa1a9",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "8a33a35ddbfbb26b",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 3.05,
  "mesh": "120531ccf9763d42",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "e06e2472cdf0199a",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 30.01,
  "mesh": "a0b4b7a06cb02ab6",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "316b2ea656fe1a82",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19683,
  "drawing": "b6fdbce01a3f9f87",
  "leftEyeOpenPx": 18.5,
  "lipGapPx": 11.06,
  "mesh": "51872603303306bd",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19701,
  "drawing": "2ecb6dba90f4cc34",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "7ab8cda12a3939d4",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 25.02,
  "mesh": "876aaf23a1772434",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "316b2ea656fe1a82",
  "leftEyeOpenPx": 26.32,
  "lipGapPx": 11.06,
  "mesh": "3ceb5eeaf62c2279",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > face, smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "eae6158f9e955597",
  "leftEyeOpenPx": 24.43,
  "lipGapPx": 11.06,
  "mesh": "18d148c1361f3587",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, E (spread): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20041,
  "drawing": "dcabf8a7188635a4",
  "leftEyeOpenPx": 25.69,
  "lipGapPx": 21.76,
  "mesh": "1fb491d04cc38250",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, FF: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "d4119ff20b2d87f6",
  "leftEyeOpenPx": 26,
  "lipGapPx": 8.92,
  "mesh": "8f37eae037ff5926",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, PP (closed): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "0a8991c0d53ba53d",
  "leftEyeOpenPx": 26,
  "lipGapPx": 3.01,
  "mesh": "36171018a6ca74de",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, aa (open): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "f43f337b881f6223",
  "leftEyeOpenPx": 26,
  "lipGapPx": 29.64,
  "mesh": "b06f0148f808499e",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, blink full: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "645fb91dd9dccd2a",
  "leftEyeOpenPx": 26,
  "lipGapPx": 10.92,
  "mesh": "c4993826112a4e25",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, blink half: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19683,
  "drawing": "da8bc62daf3b2efa",
  "leftEyeOpenPx": 18.27,
  "lipGapPx": 10.92,
  "mesh": "3e7fb267827117ec",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, gaze right-up: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19701,
  "drawing": "6636602a78710a83",
  "leftEyeOpenPx": 26,
  "lipGapPx": 10.92,
  "mesh": "c4993826112a4e25",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, oh (rounded): mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 20048,
  "drawing": "557c675cb2fb4e71",
  "leftEyeOpenPx": 26,
  "lipGapPx": 24.72,
  "mesh": "01bd8d9e8eae5043",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, rest: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "645fb91dd9dccd2a",
  "leftEyeOpenPx": 26,
  "lipGapPx": 10.92,
  "mesh": "c4993826112a4e25",
  "vertices": 1023,
}
`;

exports[`legacy animal rig golden output > full photo, smile: mesh and drawing are unchanged 1`] = `
{
  "drawCalls": 19651,
  "drawing": "db5023010ab21ef3",
  "leftEyeOpenPx": 24.13,
  "lipGapPx": 10.92,
  "mesh": "d9af3b5409a2b4bb",
  "vertices": 1023,
}
`;
